@@ -1,6 +1,7 @@
 Cacti CHANGELOG
 
 0.8.7a
+-bug#0001067: Fixed extra spaces in GPRINT. Better Alignment for Autopadding
 -bug#0001038: Data sources in RRAs have random order, messing up predefined CDEFs
 -bug#0001043: Graph Templates drop down populates with duplicates
 -bug#0001046: Upgrade from 0.8.6j to 0.8.7 defaults to Authentication Method NONE
